terraform/network.tf
resource "aws_security_group" "node_app_sg" {
    name        = "node-app-sg"
    description = "Allow SSH and HTTP traffic"
    vpc_id = var.vpc_id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        "qut-username" = "n11226048@qut.edu.au"
        "purpose"      = "practical"
    }
}
